deployments/prowlarr/prowlarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: prowlarr-port
