deployments/prowlarr/prowlarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "prowlarr.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
